implemented X-Wing KEM